fixed blog on nav/footer, fixed spacing on blog, added in google map

--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -43,12 +43,14 @@
                     list-style: none;
 
                     li {
-                        margin-bottom: 10px;
+                        margin-bottom: 8px;
+                        font-size: 0.9rem;
+                        line-height: 1.4;
                     }
                 }
     
                 // padding: 40px 10px;
-                padding: 10px 5px;
+                padding: 8px 5px;
 
                 @media (max-width: 640px) {
                     // padding: 40px 0px;
